<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Neeedo</string>

    <!-- Drawer -->
    <string name="title_section_home">Home</string>
    <string name="title_section_new_offer">New Offer</string>
    <string name="title_section_new_demand">New Demand</string>
    <string name="title_section_my_offers">My Offers</string>
    <string name="title_section_my_demands">My Demands</string>
    <string name="title_section_swiper">Swiper</string>
    <string name="title_section_message">Message</string>
    <string name="title_section_favorites">Favorites</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Cards -->
    <string name="new_card_form_hint_title">Name deiner Karte</string>
    <string name="new_card_form_hint_description">Kurzbeschreibung</string>
    <string name="new_card_form_hint_price">Preis</string>
    <string name="new_card_form_hint_continue">weiter</string>


    <!-- Forms -->
    <string name="new_card_must_tags">I\'m seeking necessarily for ...</string>
    <string name="new_card_must_tags_hint">bicycle, mountainbike, ...</string>
    <string name="new_card_should_tags">And it would be nice ... </string>
    <string name="new_card_should_tags_hint">red, ...</string>
    <string name="new_card_tags">I\'m offering ...</string>
    <string name="new_card_tags_hint">bicylce, mountainbike, red, ...</string>
    <string name="new_card_location_lat">Location lat.</string>
    <string name="new_card_location_lon">Location lon.</string>
    <string name="new_card_distance">Distance</string>
    <string name="new_card_price">Price (€)</string>
    <string name="new_card_price_min_hint">0.00</string>
    <string name="new_card_price_max_hint">42.00</string>
    <string name="new_card_price_hint">42.00</string>
    <string name="new_card_offer">Create Offer</string>
    <string name="new_card_submit">Submit</string>
    <string name="new_card_demand">Create Demand</string>
    <string name="edit_card_demand">Edit Demand</string>
    <string name="edit_card_offer">Edit Offer</string>
    <string name="button_new_demand">New Demand</string>
    <string name="button_new_offer">New Offer</string>


    <!-- Error messages -->
    <string name="error_outpan_not_found">Your product was not found in the database</string>
    <string name="error_empty_or_wrong_format">Wrong format or emtpy field(s)</string>
    <string name="sample_title">Gebrauchtes Kinderfahrrad</string>
    <string name="sample_describtion">ich biete ein 2,5 Jahre altes Kinderrad. Es ist optisch und
        technisch in einem sehr gutem Zustand. Wurde regelmäßig gepflegt mit natürlich kleinen
        Gebrauchsspuren.
    </string>

    <string name="exception_message_error_unkown">An unkown error occured.</string>
    <string name="exception_message_server_not_available">Server is not available.</string>
    <string name="exception_message_no_internet">Internet is not available.</string>
    <string name="exception_message_internal_server_error">An internal server error occured.</string>
    <string name="exception_message_email_already_in_use">Your E-Mail is already in use.</string>
    <string name="exception_message_login">You have to login to proceed.</string>

    <string name="password_length_error">Your password is to short, use at least 8 characters.</string>
    <string name="password_match_error">Your given passwords do not match.</string>

    <string name="username_invalid">Your username contains invalid characters, or does not start with a literal. Allowed are A-Z,a-z,0-9,_-.</string>

    <string name="new_messages">You have $ new messages.</string>

    <string name="no_camera">no camera available</string>
    <string name="fail">something went wrong</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="confirm">confirm</string>

    <string name="logout_finished">Logout finished.</string>
    <string name="login_finished">Login returned.</string>

    <string name="hello_world">Hello world!</string>
    <string name="or">or</string>
    <string name="start_barcode_scan">barcode scannen</string>
    <string name="action_register_new" />
    <string name="login_error_text">The email and password you entered don\'t match.</string>
    <string name="prompt_name">Your name</string>
    <string name="login_password_error">Your given passwords do not match.</string>
    <string name="login_email_error">Your given email is already in use.</string>
    <string name="login_error_fields_empty">All fields are necessary.</string>
    <string name="login_no_valid_email_error">Your given email isn\'t valid.</string>
    <string name="login_returned">Login returned</string>
    <string name="authorization_error">You aren\'t allowed to do that. Please login before proceed.</string>

    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_messsage">Write message</string>
    <string name="button_send">Send</string>

    <string name="new_message_text">New Message From: </string>
    <string name="message_text">From: </string>
    <string name="new_match_text">You got a new match to your demand. Click here for redirect.</string>

    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="dialog_delete_demand">Are you sure you want to delete this demand?</string>
    <string name="dialog_delete_offer">Are you sure you want to delete this offer?</string>
    <string name="title_activity_location_chooser">LocationChooser</string>
    <string name="new_offer_set_location">At location</string>

    <string name="item_distance">Distance</string>
    <string name="item_price">Price</string>
    <string name="empty_offers_message">You have no offers at the moment</string>
    <string name="empty_demands_message">You have no demands at the moment</string>
    <string name="empty_matching_message">No matches found</string>

    <string name="format_price">#0.00 €</string>
    <string name="format_distance">#0.00 km</string>
    <string name="camera_uploading_progress">image is uploading</string>
    <string name="location_chooser_search_hint">Suche...</string>
    <string name="message_view_no_conversations_found">No conversations have been found.</string>
    <string name="favorites_view_no_favorites_found">No favorites have been found.</string>

    <string name="single_offer_fragment_toast_message">Your message was send.</string>
    <string name="single_offer_message_edit_text_hint">Write your message here.</string>
    <string name="done">done</string>
    <string name="messages_view_send">Send</string>
    <string name="delete_success">removal done</string>

    <string name="message_view_new_message">New message from</string>
    <string name="message_view_load_older_btn">load older messages</string>
    <string name="error_empty_field">This field can not be empty</string>
    <string name="swiper_no_more_offers_to_show">No more offers to show. :-(</string>
    <string name="image_upload_failed_title">Image upload failed</string>
    <string name="image_upload_failed_message">Please try again.</string>
    <string name="image_upload_failed_accept">OK</string>
    <string name="outpan_failed_accept">OK</string>
    <string name="outpan_failed_message">no matching products for scanned product</string>
    <string name="outpan_failed_title">Barcode scan failed</string>
    <string name="single_offer_view_add_to_favorites_text">Add to Favorites</string>
    <string name="single_offer_view_remove_from_favorites_text">Remove from favorites</string>
    <string name="kilometer_radius">radius in km:</string>

    <string name="title_activity_image">Display image</string>
    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>

    <string name="validation_empty_field">This field is obligatory</string>
    <string name="validation_no_tag">Please define at least one tag</string>
    <string name="validation_value_negative">This value can\'t be negative</string>
    <string name="validation_price_max_low">Maximal price is lower than minimal price</string>
    <string name="validation_price_min_high">Minimal price is higher than maximal price</string>
    <string name="validation_price_number_format">Please use a proper price number format</string>
    <string name="validation_no_location">Please set a location</string>
    <string name="offers">Offers</string>
    <string name="create_new_offer">Create new Offer</string>
    <string name="list_offers">List your Offers</string>
    <string name="demands">Demands</string>
    <string name="create_new_demand">Create a new Demand</string>
    <string name="list_demand">list demands</string>
    <string name="action_register">register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
