<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/new_card_offer"
            android:id="@+id/tvHeader" />

        <ImageButton
            android:scaleType="centerInside"
            android:background="#6897c8"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:src="@drawable/add_offer_image"
            android:id="@+id/addImageButton"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_tags"
            android:id="@+id/etTags" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/new_card_location_lat"
            android:id="@+id/etLocationLat" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/new_card_location_lon"
            android:id="@+id/etLocationLon" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:hint="@string/new_card_price"
            android:id="@+id/etPrice" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_submit"
            android:id="@+id/btnSubmit" />

    </LinearLayout>
</ScrollView>