<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/new_card_form_hint_title"
        android:inputType="text" />

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:src="@drawable/new_card_form_image_placeholder" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/new_card_form_hint_description"
        android:inputType="textMultiLine"
        android:lines="5" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/new_card_form_hint_price"
        android:inputType="text"
        android:lines="5" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="VB?"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_card_form_hint_continue"/>


</LinearLayout>