<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/new_messages_icon"
        app:actionLayout="@layout/batch_icon_layout"
        android:title="Open Messages"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorites_icon"
        android:icon="@android:drawable/btn_star"
        android:title="@string/title_section_favorites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bar_login"
        android:title="@string/login"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_bar_logout"
        android:title="@string/logout"
        app:showAsAction="always" />
</menu>
