<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_card_demand"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <MultiAutoCompleteTextView
            android:id="@+id/etMustTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_must_tags" />

        <org.apmem.tools.layouts.FlowLayout
            android:id="@+id/flMustTagSuggestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"></org.apmem.tools.layouts.FlowLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/etShouldTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_card_should_tags" />

        <org.apmem.tools.layouts.FlowLayout
            android:id="@+id/flShouldTagSuggestions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etPriceMin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_card_price_min"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etPriceMax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/new_card_price_max"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnChooseLocation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_offer_set_location" />

        <RelativeLayout
            android:id="@+id/mapContainer"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_card_submit" />

    </LinearLayout>
</ScrollView>