<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            android:text="@string/button_edit"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="right" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_delete"
            android:id="@+id/btnDelete"
            android:layout_column="1"
            android:layout_row="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView android:id="@+id/tvTags"
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp" />

            <TextView android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:textStyle="normal"
                android:textSize="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView android:id="@+id/tvUser"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:textStyle="italic"
                android:textSize="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

        </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_messsage"
            android:id="@+id/btnMessage"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etMessage"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="2"
            android:visibility="gone" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:id="@+id/btnSend"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:visibility="gone" />

    </GridLayout>

</LinearLayout>